--- a/ShowInfo/en.lproj/MainStoryboard.storyboard
+++ b/ShowInfo/en.lproj/MainStoryboard.storyboard
@@ -91,6 +91,7 @@
                     <navigationItem key="navigationItem" title="演出排期" id="MXC-ET-HZS"/>
                     <connections>
                         <outlet property="calendarView" destination="dFt-ZB-fXf" id="U7e-jl-GMf"/>
+                        <segue destination="21" kind="push" identifier="ShowDetail" id="sJx-so-jN3"/>
                     </connections>
                 </viewController>
             </objects>
@@ -125,26 +126,12 @@
             <point key="canvasLocation" x="902" y="64"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="CalendarViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CalendarViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="calendarView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="DetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="introductionTextView" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-        <class className="MasterViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MasterViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="sJx-so-jN3"/>
+    </inferredMetricsTieBreakers>
 </document>
