--- a/ShowInfo/en.lproj/MainStoryboard.storyboard
+++ b/ShowInfo/en.lproj/MainStoryboard.storyboard
@@ -4,21 +4,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="11">
-            <objects>
-                <navigationController id="3" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="4">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="12" kind="relationship" relationship="rootViewController" id="19"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-80" y="-13"/>
-        </scene>
         <!--Master View Controller - Master-->
         <scene sceneID="18">
             <objects>
@@ -111,7 +96,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HUb-8Y-Zye" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="495" y="1244"/>
+            <point key="canvasLocation" x="843" y="1380"/>
         </scene>
         <!--Category View Controller-->
         <scene sceneID="cu3-Cb-xax">
@@ -126,7 +111,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rqO-RX-wUJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1637" y="1511"/>
+            <point key="canvasLocation" x="38" y="1527"/>
         </scene>
         <!--Detail Page View Controller-->
         <scene sceneID="QYy-ga-jMQ">
@@ -165,7 +150,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XDr-RO-Nbd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1535" y="854"/>
+            <point key="canvasLocation" x="1231" y="742"/>
         </scene>
         <!--Comment List View Controller - CommentList-->
         <scene sceneID="swh-jv-ycn">
@@ -449,7 +434,7 @@
             </objects>
             <point key="canvasLocation" x="2088" y="181"/>
         </scene>
-        <!--Master Page View Controller-->
+        <!--Master Page View Controller - 演出分类-->
         <scene sceneID="x8Z-w1-Xru">
             <objects>
                 <viewController id="yn6-Lu-3cU" customClass="MasterPageViewController" sceneMemberID="viewController">
@@ -472,15 +457,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="j1n-Y8-7Od"/>
+                    <navigationItem key="navigationItem" title="演出分类" id="j1n-Y8-7Od">
+                        <barButtonItem key="rightBarButtonItem" title="日历模式" id="vyZ-Rr-JbE">
+                            <connections>
+                                <segue destination="09Y-GM-p7X" kind="push" identifier="ShowCalendar" id="t7Y-px-Fub"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="pageControl" destination="uBv-lJ-fbi" id="x3T-tq-UY8"/>
                         <outlet property="scrollView" destination="0S1-Gs-wfA" id="wYz-Iz-rJR"/>
+                        <segue destination="12" kind="push" identifier="ShowMasterView" id="yBR-XU-pqH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wey-W5-XD8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="994" y="1824"/>
+            <point key="canvasLocation" x="38" y="880"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vVM-xj-I48">
@@ -498,7 +490,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oyX-Ah-iU8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="468" y="1824"/>
+            <point key="canvasLocation" x="-580" y="888"/>
         </scene>
     </scenes>
     <classes>
@@ -565,5 +557,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="TmH-pB-qVt"/>
+        <segue reference="t7Y-px-Fub"/>
     </inferredMetricsTieBreakers>
 </document>
