--- a/ShowInfo/en.lproj/MainStoryboard.storyboard
+++ b/ShowInfo/en.lproj/MainStoryboard.storyboard
@@ -118,11 +118,11 @@
             <objects>
                 <viewController id="BZW-7N-seC" customClass="DetailPageViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Zb-8W-rcr">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="black" id="pSx-FZ-lmb">
-                                <rect key="frame" x="0.0" y="-24" width="320" height="406"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="406"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" id="4kJ-LZ-dQ9">
@@ -261,7 +261,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="E3X-Ln-hql" customClass="Comment"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="l9T-Qs-p3M" id="O4F-dR-fmx"/>
@@ -276,11 +275,11 @@
             <objects>
                 <viewController storyboardIdentifier="CreateComment" title="CreatComment" id="LnG-VL-2YH" customClass="CreateCommentViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Zc-Ic-7Sa">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="J59-d9-QxL" customClass="TPKeyboardAvoidingScrollView">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                                <rect key="frame" x="0.0" y="44" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="iNB-mg-irv">
@@ -398,6 +397,7 @@
                         <outlet property="rateView" destination="JSv-pg-oBL" id="avz-X8-rq4"/>
                         <outlet property="scrollView" destination="J59-d9-QxL" id="sdK-NZ-9km"/>
                         <outlet property="textView" destination="bPW-6J-KMO" id="VkO-Mo-xir"/>
+                        <segue destination="BZW-7N-seC" kind="push" identifier="ShowDetail" id="Rcx-eX-Agl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="90B-Qg-lBL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -458,6 +458,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="演出分类" id="j1n-Y8-7Od">
+                        <barButtonItem key="leftBarButtonItem" image="refresh.png" id="4ZE-lV-eX7">
+                            <connections>
+                                <action selector="refresh:" destination="yn6-Lu-3cU" id="qVj-Mj-Ir8"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="日历模式" id="vyZ-Rr-JbE">
                             <connections>
                                 <segue destination="09Y-GM-p7X" kind="push" identifier="ShowCalendar" id="t7Y-px-Fub"/>
@@ -466,13 +471,14 @@
                     </navigationItem>
                     <connections>
                         <outlet property="pageControl" destination="uBv-lJ-fbi" id="x3T-tq-UY8"/>
+                        <outlet property="refreshButtonItem" destination="4ZE-lV-eX7" id="ld2-hE-LdR"/>
                         <outlet property="scrollView" destination="0S1-Gs-wfA" id="wYz-Iz-rJR"/>
                         <segue destination="12" kind="push" identifier="ShowMasterView" id="yBR-XU-pqH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wey-W5-XD8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="38" y="880"/>
+            <point key="canvasLocation" x="38" y="888"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vVM-xj-I48">
@@ -493,6 +499,9 @@
             <point key="canvasLocation" x="-580" y="888"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="refresh.png" width="32" height="32"/>
+    </resources>
     <classes>
         <class className="CalendarViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CalendarViewController.h"/>
@@ -539,7 +548,9 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MasterPageViewController.h"/>
             <relationships>
                 <relationship kind="action" name="changePage:"/>
+                <relationship kind="action" name="refresh:"/>
                 <relationship kind="outlet" name="pageControl" candidateClass="UIPageControl"/>
+                <relationship kind="outlet" name="refreshButtonItem" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
             </relationships>
         </class>
@@ -556,7 +567,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="TmH-pB-qVt"/>
         <segue reference="t7Y-px-Fub"/>
+        <segue reference="Rcx-eX-Agl"/>
     </inferredMetricsTieBreakers>
 </document>
